Fix milestones category label affcted by dark mode

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -39,6 +39,7 @@ a {
   font-size: 16px;
   font-weight: 700;
   margin-top: -4px;
+  color: #000;
 }
 .timelines * .milestones__horizontal_line {
   position: absolute;
